--- a/package.json
+++ b/package.json
@@ -35,16 +35,21 @@
   "devDependencies": {
     "console-polyfill": "^0.2.2",
     "es5-shim": "^4.5.8",
-    "react": "0.14.x",
-    "react-dom": "0.14.x",
-    "react-addons-test-utils": "0.14.x",
+    "eslint": "~2.13.1",
+    "eslint-config-airbnb": "~9.0.1",
+    "eslint-plugin-import": "~1.9.2",
+    "eslint-plugin-jsx-a11y": "~1.5.3",
+    "eslint-plugin-react": "~5.2.2",
     "expect.js": "~0.3.1",
-    "uxcore-tools": "0.2.x",
+    "kuma-base": "1.x",
+    "react": "0.14.x",
+    "react-addons-test-utils": "0.14.x",
+    "react-dom": "0.14.x",
     "uxcore-kuma": "2.x",
-    "kuma-base": "1.x"
+    "uxcore-tools": "0.2.x"
   },
   "dependencies": {
-    "classnames": "^2.1.2",
+    "classnames": "^2.2.5",
     "object-assign": "^4.0.0"
   },
   "contributors": [],
