--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,9 @@
 {
     "extends": "airbnb",
-    "plugins": [
-        "react"
-    ]
+    "parser": "babel-eslint",
+    "env": {
+        "node": true,
+        "mocha": true,
+        "browser": true
+    }
 }
