--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,5 +5,9 @@
         "node": true,
         "mocha": true,
         "browser": true
+    },
+    "rules": {
+        "import/no-extraneous-dependencies": "off",
+        "jsx-a11y/no-static-element-interactions": "off"
     }
 }
