--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     },
     "rules": {
         "import/no-extraneous-dependencies": "off",
-        "jsx-a11y/no-static-element-interactions": "off"
+        "jsx-a11y/no-static-element-interactions": "off",
+        "react/jsx-no-bind": "off"
     }
 }
