--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "object-assign": "^4.0.0"
+    "object-assign": "^4.0.0",
+    "uxcore-animate": "~0.2.0"
   },
   "contributors": [],
   "license": "MIT"
