--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,8 @@
     "rules": {
         "import/no-extraneous-dependencies": "off",
         "jsx-a11y/no-static-element-interactions": "off",
-        "react/jsx-no-bind": "off"
+        "react/jsx-no-bind": "off",
+        "react/forbid-prop-types": "off",
+        "react/no-unused-prop-types": "off"
     }
 }
