--- a/package.json
+++ b/package.json
@@ -1,56 +1,59 @@
 {
- "name": "uxcore-album",
- "version": "0.3.14",
- "description": "uxcore-album component for uxcore.",
- "repository": "https://github.com/uxcore/uxcore-album.git",
- "author": "vincent.bian",
- "main": "build/index.js",
- "scripts": {
-  "start": "uxcore-tools run start",
-  "server": "uxcore-tools run server",
-  "lint": "uxcore-tools run lint",
-  "build": "uxcore-tools run build",
-  "test": "uxcore-tools run test",
-  "coverage": "uxcore-tools run coverage",
-  "pub": "uxcore-tools run pub",
-  "dep": "uxcore-tools run dep",
-  "update": "uxcore-tools run update",
-  "tnpm-dep": "uxcore-tools run tnpm-dep",
-  "saucelabs": "uxcore-tools run saucelabs",
-  "chrome": "uxcore-tools run chrome",
-  "browsers": "uxcore-tools run browsers"
- },
- "bugs": {
-  "url": "http://github.com/uxcore/uxcore-album/issues"
- },
- "keywords": [
-  "react",
-  "react-component",
-  "uxcore-album",
-  "Album",
-  "uxcore",
-  "album",
-  "preview",
-  "image"
- ],
- "devDependencies": {
-  "console-polyfill": "^0.2.2",
-  "enzyme": "^2.6.0",
-  "es5-shim": "^4.5.8",
-  "expect.js": "~0.3.1",
-  "kuma-base": "1.x",
-  "react": "0.14.x",
-  "react-addons-test-utils": "0.14.x",
-  "react-dom": "0.14.x",
-  "uxcore-kuma": "*",
-  "uxcore-tools": "0.2.x"
- },
- "dependencies": {
-  "classnames": "^2.2.5",
-  "object-assign": "^4.0.0",
-  "uxcore-animate": "~0.2.0",
-  "uxcore-icon": "^0.1.10"
- },
- "contributors": [],
- "license": "MIT"
+  "name": "uxcore-album",
+  "version": "0.3.14",
+  "description": "uxcore-album component for uxcore.",
+  "repository": "https://github.com/uxcore/uxcore-album.git",
+  "author": "vincent.bian",
+  "main": "build/index.js",
+  "scripts": {
+    "start": "uxcore-tools run start",
+    "server": "uxcore-tools run server",
+    "lint": "uxcore-tools run lint",
+    "build": "uxcore-tools run build",
+    "test": "uxcore-tools run test",
+    "coverage": "uxcore-tools run coverage",
+    "pub": "uxcore-tools run pub",
+    "dep": "uxcore-tools run dep",
+    "tnpm-dep": "uxcore-tools run tnpm-dep",
+    "chrome": "uxcore-tools run chrome",
+    "browsers": "uxcore-tools run browsers",
+    "saucelabs": "uxcore-tools run saucelabs",
+    "update": "uxcore-tools run update",
+    "tnpm-update": "uxcore-tools run tnpm-update"
+  },
+  "bugs": {
+    "url": "http://github.com/uxcore/uxcore-album/issues"
+  },
+  "keywords": [
+    "react",
+    "react-component",
+    "uxcore-album",
+    "Album",
+    "uxcore",
+    "album",
+    "preview",
+    "image"
+  ],
+  "devDependencies": {
+    "console-polyfill": "^0.2.2",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-15": "^1.0.0",
+    "es5-shim": "^4.5.8",
+    "expect.js": "~0.3.1",
+    "kuma-base": "1.x",
+    "react": "15.x",
+    "react-dom": "15.x",
+    "react-test-renderer": "15.x",
+    "uxcore-kuma": "*",
+    "uxcore-tools": "0.2.x"
+  },
+  "dependencies": {
+    "classnames": "^2.2.5",
+    "object-assign": "^4.0.0",
+    "prop-types": "15.x",
+    "uxcore-animate": "~0.2.0",
+    "uxcore-icon": "^0.1.10"
+  },
+  "contributors": [],
+  "license": "MIT"
 }
