--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
  "devDependencies": {
   "console-polyfill": "^0.2.2",
   "enzyme": "^3.0.0",
-  "enzyme-adapter-react-15": "^1.0.0",
-  "es5-shim": "^4.5.8",
   "expect.js": "~0.3.1",
   "kuma-base": "1.x",
-  "react": "15.x",
-  "react-dom": "15.x",
-  "react-test-renderer": "15.x",
+  "react": "16.x",
+  "react-dom": "16.x",
+  "react-test-renderer": "16.x",
   "uxcore-kuma": "*",
-  "uxcore-tools": "0.2.x"
+  "uxcore-tools": "0.2.x",
+  "babel-polyfill": "6.x",
+  "enzyme-adapter-react-16": "1.x"
  },
  "dependencies": {
   "classnames": "^2.2.5",
